Code reorganize. Added a basic README

--- a/video-chat-sample/app/src/main/res/layout/activity_main.xml
+++ b/video-chat-sample/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,8 @@
         android:layout_height="0dp"
         android:background="@color/black"
 
-        app:layout_constraintBottom_toTopOf="@+id/horizontal_guide"
-        app:layout_constraintEnd_toStartOf="@+id/vertical_guide"
+        app:layout_constraintBottom_toTopOf="@+id/vertical_guide"
+        app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:show_buffering="when_playing"
@@ -45,7 +45,7 @@
         app:layout_constraintEnd_toEndOf="@id/player_view" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/horizontal_guide"
+        android:id="@+id/vertical_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -53,7 +53,7 @@
         tools:layout_editor_absoluteY="300dp" />
 
     <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/vertical_guide"
+        android:id="@+id/horizontal_guide"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -68,9 +68,9 @@
         android:layout_height="0dp"
         android:background="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/vertical_guide"
+        app:layout_constraintEnd_toStartOf="@+id/horizontal_guide"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontal_guide" />
+        app:layout_constraintTop_toBottomOf="@+id/vertical_guide" />
 
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/end_chat_view"
@@ -78,9 +78,9 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/horizontal_guide"
+        app:layout_constraintBottom_toTopOf="@+id/vertical_guide"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/vertical_guide"
+        app:layout_constraintStart_toEndOf="@+id/horizontal_guide"
         app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
