--- a/TwoPageEBookReader/app/src/main/res/layout/start_title_layout.xml
+++ b/TwoPageEBookReader/app/src/main/res/layout/start_title_layout.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) Microsoft Corporation. All rights reserved.
+  ~  Licensed under the MIT License.
+  -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:clickable="true">
-
+    android:clickable="true"
+    android:focusable="true">
     <TextView
         android:id="@+id/book_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:text="Book Title"
         android:textSize="20sp" />
 </FrameLayout>
