--- a/SourceEditor/app/src/main/res/layout/activity_main_surface_layout.xml
+++ b/SourceEditor/app/src/main/res/layout/activity_main_surface_layout.xml
@@ -3,7 +3,7 @@
   ~ Copyright (c) Microsoft Corporation. All rights reserved.
   ~ Licensed under the MIT License.
   ~
--->
+
 
 <com.microsoft.device.dualscreen.layouts.SurfaceDuoLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -17,4 +17,8 @@
     app:show_in_dual_screen_start="@layout/fragment_item_code"
     app:show_in_dual_screen_end="@layout/fragment_item_preview"
 
-    app:tools_screen_mode="dual_screen"/>
+    app:tools_screen_mode="dual_screen"/>-->
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="400dp"
+    android:layout_height="400dp" />
