--- a/SourceEditor/app/src/main/res/layout/fragment_item_code.xml
+++ b/SourceEditor/app/src/main/res/layout/fragment_item_code.xml
@@ -11,7 +11,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/cardview_light_background">
 
     <LinearLayout
         android:id="@+id/button_toolbar"
