--- a/SourceEditor/app/src/main/res/layout/fragment_item_preview.xml
+++ b/SourceEditor/app/src/main/res/layout/fragment_item_preview.xml
@@ -7,7 +7,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:background="@color/cardview_light_background"
     android:orientation="vertical">
 
     <LinearLayout
