--- a/SourceEditor/app/src/main/res/layout/fragment_item_code.xml
+++ b/SourceEditor/app/src/main/res/layout/fragment_item_code.xml
@@ -8,7 +8,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/code_layout"
-    android:layout_width="match_parent"
+    android:layout_width="400dp"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/cardview_light_background">
