--- a/SourceEditor/app/src/main/res/layout/activity_main.xml
+++ b/SourceEditor/app/src/main/res/layout/activity_main.xml
@@ -6,24 +6,51 @@
   ~
 -->
 
-<androidx.slidingpanelayout.widget.SlidingPaneLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/sliding_pane_layout">
+    android:id="@+id/sliding_pane_layout"
+    tools:context=".MainActivity">
 
     <!-- first child -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/code_fragment_container"
         android:name="com.microsoft.device.display.samples.sourceeditor.CodeFragment"
-        android:layout_width="400dp"
-        android:layout_height="match_parent"/>
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/vertical_fold"
+        />
+
+    <androidx.constraintlayout.widget.ReactiveGuide
+        android:id="@+id/vertical_fold"
+        app:reactiveGuide_valueId="@id/vertical_fold"
+        app:reactiveGuide_applyToAllConstraintSets="true"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content" />
+
+    <View
+        android:id="@+id/vertical_background"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/cardview_dark_background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/vertical_fold"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- second child -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/preview_fragment_container"
         android:name="com.microsoft.device.display.samples.sourceeditor.PreviewFragment"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toRightOf="@+id/vertical_fold"/>
 
-</androidx.slidingpanelayout.widget.SlidingPaneLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
