--- a/SourceEditor/app/src/main/res/layout/fragment_item_preview.xml
+++ b/SourceEditor/app/src/main/res/layout/fragment_item_preview.xml
@@ -4,38 +4,42 @@
   ~
   -->
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/cardview_light_background"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/button_toolbar"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/btn_switch_to_editor"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_weight="1"
+        android:text="@string/btn_switch_to_editor"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toLeftOf="@id/btn_switch_to_preview"/>
 
-        <Button
-            android:id="@+id/btn_switch_to_editor"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/btn_switch_to_editor" />
-
-        <Button
-            android:id="@+id/btn_switch_to_preview"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/btn_switch_to_preview" />
-
-    </LinearLayout>
+    <Button
+        android:id="@+id/btn_switch_to_preview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/btn_switch_to_preview"
+        app:layout_constraintLeft_toRightOf="@id/btn_switch_to_editor"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <ScrollView
         android:id="@+id/scrollview_preview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btn_switch_to_editor"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <WebView
             android:id="@+id/webview_preview"
@@ -43,4 +47,4 @@
             android:layout_height="wrap_content" />
     </ScrollView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
