--- a/PhotoEditor/app/src/main/res/layout/single_screen_sliders.xml
+++ b/PhotoEditor/app/src/main/res/layout/single_screen_sliders.xml
@@ -14,7 +14,7 @@
         style="@style/Widget.AppCompat.Spinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
+        android:backgroundTint="@color/cardview_light_background"
         android:entries="@array/controls_array"
         app:layout_constraintBottom_toTopOf="@id/saturation"
         app:layout_constraintEnd_toEndOf="parent"
