--- a/PhotoEditor/app/src/main/res/layout/activity_main.xml
+++ b/PhotoEditor/app/src/main/res/layout/activity_main.xml
@@ -9,74 +9,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
-        android:id="@+id/side_pane_content"
-        android:layout_width="400dp"
+    <include
+        android:id="@+id/single_screen_layout"
+        layout="@layout/single_screen_layout"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:color/holo_orange_dark"
-        android:orientation="vertical">
+        android:layout_width="wrap_content" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Side Pane"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/side_open"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:backgroundTint="@android:color/white"
-            android:text="OPEN CONTENT PANE"
-            android:textColor="@android:color/black" />
-
-        <TextView
-            android:id="@+id/sliding_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Slideable?"
-            android:textSize="20sp"
-            />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/side_pane_content2"
-        android:layout_width="400dp"
+    <include
+        android:id="@+id/dual_screen_layout"
+        layout="@layout/tools_dual_screen"
         android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:background="@android:color/holo_green_dark"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Side Pane"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/side_open2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:backgroundTint="@android:color/white"
-            android:text="OPEN CONTENT PANE"
-            android:textColor="@android:color/black" />
-
-        <TextView
-            android:id="@+id/sliding_text2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="Slideable?"
-            android:textSize="20sp"
-            />
-    </LinearLayout>
+        android:layout_width="wrap_content" />
 
 </androidx.slidingpanelayout.widget.SlidingPaneLayout>
