Added project to pipeline, pushing to test. Some linter changes

--- a/TwoPageEBookReader/app/src/main/res/menu/book_menu.xml
+++ b/TwoPageEBookReader/app/src/main/res/menu/book_menu.xml
@@ -8,19 +8,19 @@
     <item
         android:id="@+id/action_font_down"
         android:icon="@drawable/ic_fluent_font_decrease_24_regular"
-        android:title="Decrease font size"
+        android:title="@string/decrease_font_size"
         app:iconTint="?attr/colorOnPrimary"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_font_up"
         android:icon="@drawable/ic_fluent_font_increase_24_regular"
-        android:title="Increase font size"
+        android:title="@string/increase_font_size"
         app:iconTint="?attr/colorOnPrimary"
         app:showAsAction="ifRoom" />
     <item
         android:id="@+id/action_chapter_group"
         android:icon="@drawable/ic_fluent_reading_list_24_regular"
-        android:title="Select chapter"
+        android:title="@string/select_chapter"
         app:iconTint="?attr/colorOnPrimary"
         app:showAsAction="ifRoom">
         <menu />
