--- a/SourceEditor/app/src/main/res/layout/activity_main.xml
+++ b/SourceEditor/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/sliding_pane_layout"
+    android:id="@+id/window_manager_layout"
     tools:context=".MainActivity">
 
     <!-- secondary child -->
