--- a/PhotoEditor/app/src/main/res/layout/fragment_dual_screen.xml
+++ b/PhotoEditor/app/src/main/res/layout/fragment_dual_screen.xml
@@ -9,7 +9,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/dual_screen_layout">
@@ -22,8 +21,7 @@
         app:layout_constraintLeft_toLeftOf="@id/bounding_rect"
         app:layout_constraintTop_toTopOf="@id/bounding_rect"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone">
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <include
             layout="@layout/tools_dual_screen"
