--- a/TwoNote/app/src/main/res/layout/activity_main.xml
+++ b/TwoNote/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,59 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+
+<!--
+  ~ Copyright (c) Microsoft Corporation. All rights reserved.
+  ~ Licensed under the MIT License.
   ~
-  ~  Copyright (c) Microsoft Corporation. All rights reserved.
-  ~  Licensed under the MIT License.
-  ~
-  -->
-<com.microsoft.device.dualscreen.layouts.SurfaceDuoLayout xmlns:android="http://schemas.android.com/apk/res/android"
+-->
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:is_dual_landscape_single_container="true"
-    app:show_in_dual_landscape_single_container="@layout/fragment_note_detail"
-    app:show_in_dual_screen_end="@layout/fragment_note_detail"
-    app:show_in_dual_screen_start="@layout/fragment_note_list"
-    app:show_in_single_screen="@layout/fragment_note_list"
-    app:tools_screen_mode="dual_screen" />
+    android:id="@+id/window_manager_layout"
+    tools:context=".MainActivity">
+
+    <!-- secondary child -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/secondary_fragment_container"
+        android:name="com.microsoft.device.display.wm_samples.twonote.fragments.NoteListFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="@id/bounding_rect"
+        app:layout_constraintTop_toTopOf="@id/bounding_rect"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+    <!-- top child -->
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/primary_fragment_container"
+        android:name="com.microsoft.device.display.wm_samples.twonote.fragments.GetStartedFragment"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="@id/bounding_rect"
+        app:layout_constraintBottom_toBottomOf="@id/bounding_rect"
+        />
+
+    <View
+        android:id="@+id/bounding_rect"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/horiz_guide"/>
+
+    <androidx.constraintlayout.widget.ReactiveGuide
+        android:id="@+id/horiz_guide"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_end="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
