--- a/PhotoEditor/app/src/main/res/layout/picture_dual_screen.xml
+++ b/PhotoEditor/app/src/main/res/layout/picture_dual_screen.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:contentDescription="@string/image"
-        android:src="@drawable/flower"
+        android:src="@drawable/chipmunk"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
