--- a/TwoNote/app/src/main/res/layout/activity_main.xml
+++ b/TwoNote/app/src/main/res/layout/activity_main.xml
@@ -18,19 +18,19 @@
     <!-- secondary child -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/secondary_fragment_container"
-        android:name="com.microsoft.device.display.wm_samples.twonote.fragments.NoteListFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="@id/bounding_rect"
         app:layout_constraintTop_toTopOf="@id/bounding_rect"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="invisible"
         />
 
     <!-- top child -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/primary_fragment_container"
-        android:name="com.microsoft.device.display.wm_samples.twonote.fragments.GetStartedFragment"
+        android:name="com.microsoft.device.display.wm_samples.twonote.fragments.NoteListFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
