--- a/PhotoEditor/app/src/main/res/layout/activity_main.xml
+++ b/PhotoEditor/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:layout_height="match_parent">
 
     <!-- secondary child -->
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/secondary_fragment_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -22,10 +22,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/bounding_rect">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.fragment.app.FragmentContainerView>
 
     <!-- top child -->
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/primary_fragment_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -34,7 +34,7 @@
         app:layout_constraintRight_toRightOf="@id/bounding_rect"
         app:layout_constraintTop_toTopOf="parent">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.fragment.app.FragmentContainerView>
 
     <View
         android:id="@+id/bounding_rect"
