--- a/TwoNote/app/src/main/res/layout/fragment_note_detail.xml
+++ b/TwoNote/app/src/main/res/layout/fragment_note_detail.xml
@@ -71,7 +71,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             InkView:enable_pressure="true"
-            InkView:ink_color="@color/cardview_dark_background"
+            InkView:ink_color="@color/red"
             InkView:max_stroke_width="25"
             InkView:min_stroke_width="10"
             app:layout_constraintBottom_toBottomOf="parent"
