--- a/TwoNote/app/src/main/res/layout/fragment_note_detail.xml
+++ b/TwoNote/app/src/main/res/layout/fragment_note_detail.xml
@@ -6,6 +6,7 @@
   -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:InkView="http://schemas.android.com/apk/res-auto"
     android:id="@+id/note_detail_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -57,10 +58,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar_layout">
 
-        <com.microsoft.device.display.wm_samples.twonote.utils.PenDrawView
+        <com.microsoft.device.ink.InkView
             android:id="@+id/draw_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            InkView:enable_pressure="true"
+            InkView:ink_color="@color/red"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
