--- a/SourceEditor/app/src/main/res/drawable-sw720dp-2754x1800/splash.xml
+++ b/SourceEditor/app/src/main/res/drawable-sw720dp-2754x1800/splash.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimaryDark"></solid>
-        </shape>
-    </item>
+    <item android:drawable="?android:colorBackground" />
     <item
-        android:left="150dp"
-        android:top="20dp"
-        android:gravity="top|start"
+        android:top="200dp"
+        android:gravity="top|center"
         android:width="250dp"
         android:height="250dp"
         android:drawable="@mipmap/ic_launcher"
         />
+    <item android:bottom="84.0dip"
+        android:gravity="bottom|center"
+        android:drawable="@drawable/splash_logo" />
+    />
 </layer-list>
