--- a/SourceEditor/app/src/main/res/drawable/splash.xml
+++ b/SourceEditor/app/src/main/res/drawable/splash.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="@android:color/holo_green_light"></solid>
-        </shape>
-    </item>
+<layer-list
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:opacity="opaque">
+    <item android:drawable="?android:colorBackground" />
     <item
-        android:width="250dp"
-        android:height="250dp"
+        android:width="200dp"
+        android:height="200dp"
         android:gravity="center"
         android:drawable="@mipmap/ic_launcher"
         />
+    <item android:bottom="84.0dip"
+        android:gravity="bottom|center"
+        android:drawable="@drawable/splash_logo" />
+    />
 </layer-list>
