[photoeditor] splash screen

--- a/PhotoEditor/app/src/main/res/values/styles.xml
+++ b/PhotoEditor/app/src/main/res/values/styles.xml
@@ -5,6 +5,12 @@
 
 <resources>
 
+    <!-- Splash theme -->
+    <style name="Theme.Splash" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
