--- a/TwoNote/app/src/main/res/values/styles.xml
+++ b/TwoNote/app/src/main/res/values/styles.xml
@@ -5,6 +5,12 @@
   -->
 <resources>
 
+    <!-- Splash screen theme -->
+    <style name="Theme.Splash" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+    </style>
+
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
