--- a/FoldingVideoPlusChat/app/src/main/res/values/themes.xml
+++ b/FoldingVideoPlusChat/app/src/main/res/values/themes.xml
@@ -1,4 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+    <!-- Splash screen theme -->
+    <style name="Theme.Splash" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash</item>
+        <item name="android:windowDrawsSystemBarBackgrounds">false</item>
+    </style>
     <!-- Base application theme. -->
     <style name="Theme.Test3" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
