--- a/FoldingVideoPlusTrivia/app/src/main/res/layout/fragment_trivia.xml
+++ b/FoldingVideoPlusTrivia/app/src/main/res/layout/fragment_trivia.xml
@@ -30,14 +30,17 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/trivia_layout"/>
 
     <LinearLayout
         android:id="@+id/trivia_layout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:padding="20dp"
         android:animateLayoutChanges="true"
+        android:background="@color/dark_gray"
+        android:layout_margin="14dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
