--- a/FoldingVideoPlusTrivia/app/src/main/res/layout/soundtrack_layout.xml
+++ b/FoldingVideoPlusTrivia/app/src/main/res/layout/soundtrack_layout.xml
@@ -1,80 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/soundtrack">
+    android:orientation="vertical">
 
     <TextView
-        android:id="@+id/trivia_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:singleLine="true"
-        android:text="@string/soundtrack"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ScrollView
-        android:id="@+id/chat_scroll_view"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/dark_gray"
-        android:fillViewport="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/trivia_type">
+        android:layout_height="wrap_content"
+        android:text="@string/soundtrack"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-<!--        <LinearLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:orientation="vertical">-->
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp" />
 
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_1" />-->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_2" />-->
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/jan_content_des"
+            android:src="@drawable/jan_morgenstern" />
 
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_3" />-->
+        <Space
+            android:layout_width="30dp"
+            android:layout_height="match_parent" />
 
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_4" />-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:text="@string/soundtrack_info"
+            android:textColor="@color/gray"
+            android:textSize="14sp" />
 
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_5" />-->
+    </LinearLayout>
 
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_6" />-->
-
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_7" />-->
-
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_8" />-->
-
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_9" />-->
-
-<!--            <TextView-->
-<!--                style="@style/CustomTextBubble"-->
-<!--                android:text="@string/chat_text_10" />-->
-<!--        </LinearLayout>-->
-    </ScrollView>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
